[package]
name = "diesel_facet"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.10", default-features = false }
facet = { version = "0.18", features = ["reflect"] }
diesel_derives = { version = "2.2.0" }

[dev-dependencies]
diesel = { version = "2.2.10", default-features = false, features = ["sqlite"] }
