[package]
name = "diesel_facet"
version = "0.1.0"
 # needed to have const panic which allows outputing a const runtime string
edition = "2018"

[dependencies]
diesel = { version = "2.2.10", default-features = false }
facet = { version = "0.18", features = ["reflect"] }
diesel_derives = { version = "2.2.0" }

[dev-dependencies]
diesel = { version = "2.2.10", default-features = false, features = ["sqlite"] }
